# fastapi_open_telemetry

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: __main__.py
app/domain/: __init__.py  providers.py
app/entrypoints/api/: app.py  exception_handlers.py
app/entrypoints/api/routers/: __init__.py  quotation.py
app/exceptions/: providers_exceptions.py
app/service_layer/: quotation_service.py
app/settings/: __init__.py  base.py  instrumentation.py  test.py
src/: __main__.py
src/clients/: __init__.py  m_coin.py
src/domain/: m_coin.py
src/entrypoints/api/: app.py
src/entrypoints/api/routers/: quotation.py
src/schemas/: ticker_schemas.py
src/service_layer/: coin_quotation.py
src/settings/: base.py  dev.py  local.py  prod.py
tests/handler/: test_m_coin.py
tests/providers/: test_mercado_bitcoin_provider.py
